--- a/.pylintrc
+++ b/.pylintrc
@@ -2,8 +2,9 @@
   good-names=i,j,ex,pk
 
 [MESSAGES CONTROL]
-  disable=broad-except,imported-auth-user,missing-class-docstring,no-self-use,abstract-method
+  disable=broad-except,imported-auth-user,missing-class-docstring,abstract-method
 
 [MASTER]
   disable=C0114,
-
+  load-plugins=pylint_django,
+  django-settings-module=artparty.settings
